--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -1,4 +1,4 @@
-\chapter{Оформление различных элементов}\label{ch:ch1}
+\chapter{Обзор концепций, алгоритмов и программных средств по теме исследования}\label{ch:ch1}
 
 \section{Форматирование текста}\label{sec:ch1/sec1}
 
