--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -1,4 +1,4 @@
-\chapter{Реализация программного обеспечения}\label{ch:ch3}
+\chapter{Тестирование программного обеспечения}\label{ch:ch3}
 
 \section{Таблица обыкновенная}\label{sec:ch3/sect1}
 
