--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1,4 +1,4 @@
-\chapter{Длинное название главы, в которой мы смотрим на~примеры того, как будут верстаться изображения и~списки}\label{ch:ch2}
+\chapter{Проектирование программного обеспечения}\label{ch:ch2}
 
 \section{Одиночное изображение}\label{sec:ch2/sec1}
 
